added googlefont, favicon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     />
     <!-- styles -->
     <link rel="stylesheet" href="./css/styles.css" />
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <h1>hello from backroads</h1>
