added hero html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,23 @@
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <h1>hello from backroads</h1>
-    <i class="fas fa-home fa-5x"></i>
+    <!-- header -->
+    <header id="home">
+      <!-- navbar -->
+      <nav></nav>
+      <!-- hero component -->
+      <div class="hero">
+        <div class="hero-banner">
+          <h1 class="hero-title">continue exploring</h1>
+          <p class="hero-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Repudiandae, magni in. Doloribus!
+          </p>
+          <a href="#featured" class="btn-white">explore tour</a>
+        </div>
+      </div>
+    </header>
+    <!-- end of header -->
     <script src="./js/app.js"></script>
   </body>
 </html>
