added hero and about

--- a/index.html
+++ b/index.html
@@ -32,6 +32,42 @@
       </div>
     </header>
     <!-- end of header -->
+    <!-- about section -->
+    <section class="section about" id="about">
+      <!-- title -->
+      <div class="title-wrapper">
+        <h2 class="title">about <span class="subtitle">us</span></h2>
+      </div>
+      <!-- end of title -->
+      <!-- about center -->
+      <div class="about-center section-center">
+        <!-- about image -->
+        <article class="about-img">
+          <img
+            src="./images/about.jpeg"
+            class="about-photo"
+            alt="awesome beach"
+          />
+        </article>
+        <!-- about info -->
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nisi
+            modi molestias repellat ut rerum omnis repudiandae, voluptatem
+            laboriosam deleniti?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nisi
+            modi molestias repellat ut rerum omnis repudiandae, voluptatem
+            laboriosam deleniti?
+          </p>
+          <a href="#" class="btn-primary">read more</a>
+        </article>
+      </div>
+    </section>
+    <!-- end of about section -->
+
     <script src="./js/app.js"></script>
   </body>
 </html>
