--- a/index.html
+++ b/index.html
@@ -67,6 +67,54 @@
       </div>
     </section>
     <!-- end of about section -->
+    <!-- services section -->
+    <section class="section services" id="services">
+      <!-- title -->
+      <div class="title-wrapper">
+        <h2 class="title">our <span class="subtitle">services</span></h2>
+      </div>
+      <!-- end of title -->
+      <!-- section center -->
+      <div class="section-center services-center">
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon"><i class="fas fa-wallet fa-fw"></i></span>
+          <div class="service-info">
+            <h4 class="service-title">saving money</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae,
+              est. Lorem ipsum dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <!-- end of single service -->
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon"><i class="fas fa-tree fa-fw"></i></span>
+          <div class="service-info">
+            <h4 class="service-title">endless hiking</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae,
+              est. Lorem ipsum dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <!-- end of single service -->
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon"><i class="fas fa-socks fa-fw"></i></span>
+          <div class="service-info">
+            <h4 class="service-title">amazing comfort</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae,
+              est. Lorem ipsum dolor sit amet.
+            </p>
+          </div>
+        </article>
+        <!-- end of single service -->
+      </div>
+    </section>
+    <!-- end of services section -->
 
     <script src="./js/app.js"></script>
   </body>
