--- a/index.html
+++ b/index.html
@@ -115,6 +115,134 @@
       </div>
     </section>
     <!-- end of services section -->
+    <!-- featured tours -->
+    <section class="section featured" id="featured">
+      <!-- title -->
+      <div class="title-wrapper">
+        <h2 class="title">featured <span class="subtitle">tours</span></h2>
+      </div>
+      <!-- end of title -->
+      <!-- featured-center -->
+      <div class="section-center featured-center">
+        <!-- single tour -->
+        <article class="tour-card">
+          <!-- image container -->
+          <div class="tour-img-container">
+            <img
+              src="./images/tour-1.jpeg"
+              class="tour-img"
+              alt="awesome tour"
+            />
+            <p class="tour-date">august 14th, 2020</p>
+          </div>
+          <!-- tour footer -->
+          <div class="tour-footer">
+            <h4 class="tour-title">tibet adventure</h4>
+            <!-- tour info -->
+            <div class="tour-info">
+              <p class="tour-contry">
+                <span><i class="fas fa-map"></i></span>
+                china
+              </p>
+              <div class="tour-details">
+                <p>6 days</p>
+                <p>from $2100</p>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+        <!-- single tour -->
+        <article class="tour-card">
+          <!-- image container -->
+          <div class="tour-img-container">
+            <img
+              src="./images/tour-2.jpeg"
+              class="tour-img"
+              alt="awesome tour"
+            />
+            <p class="tour-date">october 1th, 2020</p>
+          </div>
+          <!-- tour footer -->
+          <div class="tour-footer">
+            <h4 class="tour-title">best of java</h4>
+            <!-- tour info -->
+            <div class="tour-info">
+              <p class="tour-contry">
+                <span><i class="fas fa-map"></i></span>
+                indonesia
+              </p>
+              <div class="tour-details">
+                <p>10 days</p>
+                <p>from $4100</p>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+        <!-- single tour -->
+        <article class="tour-card">
+          <!-- image container -->
+          <div class="tour-img-container">
+            <img
+              src="./images/tour-3.jpeg"
+              class="tour-img"
+              alt="awesome tour"
+            />
+            <p class="tour-date">september 26th, 2020</p>
+          </div>
+          <!-- tour footer -->
+          <div class="tour-footer">
+            <h4 class="tour-title">explore hong kong</h4>
+            <!-- tour info -->
+            <div class="tour-info">
+              <p class="tour-contry">
+                <span><i class="fas fa-map"></i></span>
+                hong kong
+              </p>
+              <div class="tour-details">
+                <p>12 days</p>
+                <p>from $3100</p>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+        <!-- single tour -->
+        <article class="tour-card">
+          <!-- image container -->
+          <div class="tour-img-container">
+            <img
+              src="./images/tour-4.jpeg"
+              class="tour-img"
+              alt="awesome tour"
+            />
+            <p class="tour-date">december 5th, 2020</p>
+          </div>
+          <!-- tour footer -->
+          <div class="tour-footer">
+            <h4 class="tour-title">kenya highlights</h4>
+            <!-- tour info -->
+            <div class="tour-info">
+              <p class="tour-contry">
+                <span><i class="fas fa-map"></i></span>
+                kenya
+              </p>
+              <div class="tour-details">
+                <p>22 days</p>
+                <p>from $5400</p>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+      </div>
+      <!-- end of featured center -->
+      <div class="tour-link">
+        <a href="#" class="btn-primary">all tours</a>
+      </div>
+    </section>
+    <!-- end of featured tours -->
 
     <script src="./js/app.js"></script>
   </body>
