--- a/index.html
+++ b/index.html
@@ -243,6 +243,78 @@
       </div>
     </section>
     <!-- end of featured tours -->
+    <!-- gallery -->
+    <section class="section gallery" id="gallery">
+      <!-- title -->
+      <div class="title-wrapper">
+        <h2 class="title">our <span class="subtitle">gallery</span></h2>
+      </div>
+      <!-- end of title -->
+      <!-- gallery-center -->
+      <div class="gallery-center">
+        <!-- single item -->
+        <div class="gallery-img-container">
+          <img
+            src="./images/tour-1.jpeg"
+            class="gallery-img"
+            alt="awesome tour"
+          />
+          <span class="gallery-icon"><i class="fas fa-search"></i></span>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="gallery-img-container">
+          <img
+            src="./images/tour-2.jpeg"
+            class="gallery-img"
+            alt="awesome tour"
+          />
+          <span class="gallery-icon"><i class="fas fa-search"></i></span>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="gallery-img-container">
+          <img
+            src="./images/tour-3.jpeg"
+            class="gallery-img"
+            alt="awesome tour"
+          />
+          <span class="gallery-icon"><i class="fas fa-search"></i></span>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="gallery-img-container">
+          <img
+            src="./images/tour-4.jpeg"
+            class="gallery-img"
+            alt="awesome tour"
+          />
+          <span class="gallery-icon"><i class="fas fa-search"></i></span>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="gallery-img-container">
+          <img
+            src="./images/tour-5.jpeg"
+            class="gallery-img"
+            alt="awesome tour"
+          />
+          <span class="gallery-icon"><i class="fas fa-search"></i></span>
+        </div>
+        <!-- end of single item -->
+        <!-- single item -->
+        <div class="gallery-img-container">
+          <img
+            src="./images/tour-6.jpeg"
+            class="gallery-img"
+            alt="awesome tour"
+          />
+          <span class="gallery-icon"><i class="fas fa-search"></i></span>
+        </div>
+        <!-- end of single item -->
+      </div>
+    </section>
+    <!-- end of gallery -->
 
     <script src="./js/app.js"></script>
   </body>
