--- a/index.html
+++ b/index.html
@@ -315,6 +315,21 @@
       </div>
     </section>
     <!-- end of gallery -->
+    <!-- deals -->
+    <section class="section deals" id="deals">
+      <!-- title -->
+      <div class="title-wrapper">
+        <h2 class="title">hot <span class="subtitle">deals</span></h2>
+      </div>
+      <!-- end of title -->
+      <form>
+        <div class="input-group">
+          <input type="email" class="form-control" placeholder="your email" />
+          <button type="submit" class="btn-submit">submit</button>
+        </div>
+      </form>
+    </section>
+    <!-- end of deals -->
 
     <script src="./js/app.js"></script>
   </body>
