--- a/index.html
+++ b/index.html
@@ -330,7 +330,35 @@
       </form>
     </section>
     <!-- end of deals -->
-
+    <!-- footer -->
+    <footer class="section footer">
+      <!-- footer links -->
+      <div class="footer-links">
+        <a href="#home" class="footer-link">home</a>
+        <a href="#about" class="footer-link">about</a>
+        <a href="#services" class="footer-link">services</a>
+        <a href="#featured" class="footer-link">featured</a>
+        <a href="#gallery" class="footer-link">gallery</a>
+      </div>
+      <!-- footer icons -->
+      <div class="footer-icons">
+        <a href="https://www.twitter.com" target="_blank" class="footer-icon">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://www.twitter.com" target="_blank" class="footer-icon">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.twitter.com" target="_blank" class="footer-icon">
+          <i class="fab fa-squarespace"></i>
+        </a>
+      </div>
+      <!-- copyright -->
+      <p class="copyright">
+        copyright &copy; backroads trevel tours company
+        <span class="date">2020</span>. all rights reserved
+      </p>
+    </footer>
+    <!-- javascript -->
     <script src="./js/app.js"></script>
   </body>
 </html>
