--- a/index.html
+++ b/index.html
@@ -18,7 +18,48 @@
     <!-- header -->
     <header id="home">
       <!-- navbar -->
-      <nav></nav>
+      <nav class="navbar">
+        <div class="nav-center">
+          <!-- nav header -->
+          <div class="nav-header">
+            <img
+              src="./images/logo.svg"
+              class="nav-logo"
+              alt="backroads company"
+            />
+            <button
+              type="button"
+              class="nav-toggle"
+              id="nav-toggle"
+              aria-label="nav toggler"
+            >
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!-- end of nav header -->
+          <!-- nav links -->
+          <div class="nav-links" id="nav-links">
+            <a href="#home" class="nav-link">home</a>
+            <a href="#about" class="nav-link">about</a>
+            <a href="#services" class="nav-link">services</a>
+            <a href="#featured" class="nav-link">featured</a>
+            <a href="#gallery" class="nav-link">gallery</a>
+          </div>
+          <!-- end of nav links -->
+          <!-- nav social media icons -->
+          <div class="nav-icons">
+            <a href="https://www.twitter.com" target="_blank" class="nav-icon">
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.twitter.com" target="_blank" class="nav-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.twitter.com" target="_blank" class="nav-icon">
+              <i class="fab fa-squarespace"></i>
+            </a>
+          </div>
+        </div>
+      </nav>
       <!-- hero component -->
       <div class="hero">
         <div class="hero-banner">
