--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       <!-- copyright -->
       <p class="copyright">
         copyright &copy; backroads trevel tours company
-        <span class="date">2020</span>. all rights reserved
+        <span id="date"></span>. all rights reserved
       </p>
     </footer>
     <!-- javascript -->
