--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           <!-- end of nav header -->
           <!-- nav links -->
           <div class="nav-links" id="nav-links">
-            <a href="#home" class="nav-link">home</a>
-            <a href="#about" class="nav-link">about</a>
-            <a href="#services" class="nav-link">services</a>
-            <a href="#featured" class="nav-link">featured</a>
-            <a href="#gallery" class="nav-link">gallery</a>
+            <a href="#home" class="nav-link scroll-link">home</a>
+            <a href="#about" class="nav-link scroll-link">about</a>
+            <a href="#services" class="nav-link scroll-link">services</a>
+            <a href="#featured" class="nav-link scroll-link">featured</a>
+            <a href="#gallery" class="nav-link scroll-link">gallery</a>
           </div>
           <!-- end of nav links -->
           <!-- nav social media icons -->
@@ -68,7 +68,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Repudiandae, magni in. Doloribus!
           </p>
-          <a href="#featured" class="btn-white">explore tour</a>
+          <a href="#featured" class="btn-white scroll-link">explore tour</a>
         </div>
       </div>
     </header>
@@ -375,11 +375,11 @@
     <footer class="section footer">
       <!-- footer links -->
       <div class="footer-links">
-        <a href="#home" class="footer-link">home</a>
-        <a href="#about" class="footer-link">about</a>
-        <a href="#services" class="footer-link">services</a>
-        <a href="#featured" class="footer-link">featured</a>
-        <a href="#gallery" class="footer-link">gallery</a>
+        <a href="#home" class="footer-link scroll-link">home</a>
+        <a href="#about" class="footer-link scroll-link">about</a>
+        <a href="#services" class="footer-link scroll-link">services</a>
+        <a href="#featured" class="footer-link scroll-link">featured</a>
+        <a href="#gallery" class="footer-link scroll-link">gallery</a>
       </div>
       <!-- footer icons -->
       <div class="footer-icons">
